--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,3 +14,5 @@ Description: This package uses the refernce and alternative allele counts to pre
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
 Encoding: UTF-8
+URL: https://github.com/raziafrooz/ReGenoCaller
+BugReports: https://github.com/raziafrooz/ReGenoCaller/issues
