--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,3 +16,7 @@ Encoding: UTF-8
 URL: https://github.com/raziafrooz/RecountGenotyper
 BugReports: https://github.com/raziafrooz/RecountGenotyper/issues
 RoxygenNote: 7.2.3
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
+LazyData: true
