rm modelLattice from param of the function since now it in avail as internal data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,3 +5,5 @@ export(GetMandS)
 import(GenomicRanges)
 import(data.table)
 import(rtracklayer)
+importFrom(S4Vectors,queryHits)
+importFrom(S4Vectors,subjectHits)
