--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,11 @@
 export(GetGenotype)
 export(GetMandS)
 import(GenomicRanges)
+import(IRanges)
 import(data.table)
+import(rms)
 import(rtracklayer)
+import(tidyverse)
+importFrom(IRanges,IRanges)
 importFrom(S4Vectors,queryHits)
 importFrom(S4Vectors,subjectHits)
