Acc was not ordered (fixed)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(GetMandS)
 import(GenomicRanges)
 import(IRanges)
 import(data.table)
+import(rms)
 import(rtracklayer)
 import(tidyverse)
 importFrom(IRanges,IRanges)
