--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,9 +5,10 @@ export(GetMandS)
 import(GenomicRanges)
 import(IRanges)
 import(data.table)
+import(dplyr)
 import(rms)
 import(rtracklayer)
-import(tidyverse)
 importFrom(IRanges,IRanges)
 importFrom(S4Vectors,queryHits)
 importFrom(S4Vectors,subjectHits)
+importFrom(dplyr,case_when)
