--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: RecountGenotyper
-Title: Genotype calling from Recount3 RNA-seq data.
+Title: Genotype calling from Recount3 RNA-seq data
 Version: 0.0.0.9000
 Authors@R: c(
     person("Afrooz", "Razi", , "arazi2@jhmi.edu", role = c("aut", "cre"), comment = c(ORCID = "0000-0003-4556-9383")),
