--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ import(data.table)
 import(dplyr)
 import(rms)
 import(rtracklayer)
+import(tidyverse)
 importFrom(IRanges,IRanges)
 importFrom(S4Vectors,queryHits)
 importFrom(S4Vectors,subjectHits)
